...
    item: RTSPItem,
    moreOption: Boolean = false,
    screenActions: StreamItemScreenActions,
    playerViewModel: RTSPVideoPlayerViewModel? = null
) {
    BoxWithConstraints(
        modifier = modifier.testTag("StreamItemScreenRoot"),
        contentAlignment = Alignment.Center
    ) {
        val isLandscape = maxWidth > maxHeight
        var showDeleteConfirmationPrompt by remember { mutableStateOf(false) }
        val rtspViewModel = playerViewModel ?: koinViewModel<RTSPVideoPlayerViewModel> {
            parametersOf(
...
            }
        }

        if (isLandscape) {
            VideoPlayer(
                modifier = Modifier
                    .testTag("VideoPlayerLandscape")
                    .fillMaxSize(),
                viewModel = rtspViewModel,
            )
        } else {
            Column(
                modifier = Modifier.fillMaxSize(),
...
                            color = MaterialTheme.colorScheme.onSecondary
                        )
                        Text(
                            item.name,
                            color = MaterialTheme.colorScheme.onBackground,
                            textAlign = TextAlign.End,
                            modifier = Modifier.testTag("Name")
                        )
                    }
                }

                val uriRow: @Composable (Modifier) -> Unit = { mod ->
                    Row(
...
                            color = MaterialTheme.colorScheme.onSecondary
                        )
                        Text(
                            item.hideCredentialUri,
                            color = MaterialTheme.colorScheme.onSecondary,
                            textAlign = TextAlign.End,
                            modifier = Modifier.testTag("Uri")
                        )
                    }
                }

                val tagsRow: @Composable (Modifier) -> Unit = { mod ->
                    Row(
...
                            text = { Text(stringResource(Res.string.edit)) },
                            leadingIcon = { Icon(Icons.Default.Edit, contentDescription = null) },
                            onClick = {
                                moreState = MoreOptionState.CLOSED
                                screenActions.onEditItemSelected()
                            },
                            modifier = Modifier.testTag("EditButton")
                        )
                        DropdownMenuItem(
                            text = { Text(stringResource(Res.string.delete)) },
                            leadingIcon = { Icon(Icons.Default.Delete, contentDescription = null) },
                            onClick = {
                                moreState = MoreOptionState.CLOSED
                                showDeleteConfirmationPrompt = true
                            },
                            modifier = Modifier.testTag("DeleteButton")
                        )
                    }

                    IconButton(
                        onClick = { moreState = !moreState },
                        colors = IconButtonDefaults.filledIconButtonColors(),
                        modifier = Modifier.testTag("MoreButton")
                    ) {
                        Icon(
                            imageVector = if (moreState == MoreOptionState.CLOSED) Icons.Default.MoreVert else Icons.Default.Close,
                            contentDescription = stringResource(Res.string.add_rtsp_button)
                        )
                    }
...
        text = { Text(text = stringResource(Res.string.delete_dialog_message)) },
        containerColor = MaterialTheme.colorScheme.background,
        onDismissRequest = onDismissRequest,
        confirmButton = {
            TextButton(
                onClick = onConfirmation,
                modifier = Modifier.testTag("DeleteConfirmButton")
            ) {
                Text(stringResource(Res.string.confirm))
            }
        },
        dismissButton = {
            TextButton(
...
