...
                onClick = { fieldsValue = defaultValue },
                enabled = defaultValue != fieldsValue,
                colors = IconButtonDefaults.iconButtonColors(
                    contentColor = MaterialTheme.colorScheme.onSurface,
                    containerColor = MaterialTheme.colorScheme.surface
                ),
                modifier = Modifier.testTag("ClearButton")
            ) {
                Icon(imageVector = Icons.Default.Restore, stringResource(Res.string.clear_button))
            }

            IconButton(
                onClick = { screenActions.onSaveItem(fieldsValue.mergeTo(item)) },
                enabled = fieldsValue.isValid,
                colors = IconButtonDefaults.iconButtonColors(
                    contentColor = MaterialTheme.colorScheme.onSurface,
                    containerColor = MaterialTheme.colorScheme.surface
                ),
                modifier = Modifier.testTag("SaveButton")
            ) {
                Icon(imageVector = Icons.Default.Save, stringResource(Res.string.save_button))
            }
        }
    }
}
...
